--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,7 @@ location = root
 [Prereqs]
 Moose = 1.23
 Data::Serializer = 0.54
+MooseX::Types = 0.35
 
 [Prereqs / TestRequires]
 Test::Simple = 0.94
